build: 升级 idea 版本
支持最新的版本