@@ -21,12 +21,10 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  * SOFTWARE.
  */
-
 plugins {
-    // 1. 编译, 测试插件 (Java, Groovy,Scala, War 等)
     id 'java'
-    // Java 是Gradle的核心插件, 是内置的, 内置插件不需要配置依赖路径
-    id 'org.jetbrains.intellij' version '0.4.18'
+    id "io.freefair.lombok" version "5.3.0"
+    id 'org.jetbrains.intellij' version '0.6.5'
 }
 
 group group
@@ -36,27 +34,9 @@ sourceCompatibility = javaVersion
 targetCompatibility = javaVersion
 
 repositories {
+    maven { url 'https://maven.aliyun.com/repository/public/' }
+    mavenLocal()
     mavenCentral()
-    maven { url "http://maven.aliyun.com/nexus/content/groups/public/" }
-    maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
-    maven { url 'http://dl.bintray.com/jetbrains/intellij-plugin-service' }
-}
-
-intellij {
-    // 在 2019.2 以上版本添加生效
-    // plugins 'java'
-    pluginName name
-    version ideaVersion
-    // 插件生成的临时文件的地址，可以省略
-    sandboxDirectory = project.rootDir.canonicalPath + "/.sandbox"
-    updateSinceUntilBuild false
-    sameSinceUntilBuild false
-}
-
-publishPlugin {
-    username System.getenv('username')
-    password System.getenv('password')
-    channels publishChannels
 }
 
 // 声明依赖使用下面的闭包
@@ -68,8 +48,33 @@ dependencies {
     compileOnly 'org.projectlombok:lombok:1.18.18'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.18'
     testCompileOnly 'org.projectlombok:lombok:1.18.18'
-    testCompile 'junit:junit:4.13.1'
     compile 'net.coobird:thumbnailator:0.4.13'
+    testCompile 'junit:junit:4.13.1'
     testCompile group: 'com.aliyun.oss', name: 'aliyun-sdk-oss', version: '3.8.1'
     testCompile group: 'com.baidubce', name: 'bce-java-sdk', version: '0.10.153'
 }
+
+lombok {
+    version = "1.18.18"
+    generateLombokConfig.enabled = false
+}
+
+intellij {
+    pluginName name
+    version ideaVersion
+    // 插件生成的临时文件的地址，可以省略
+    sandboxDirectory = project.rootDir.canonicalPath + "/.sandbox"
+    updateSinceUntilBuild false
+}
+
+runIde {
+    jvmArgs '--add-exports', 'java.base/jdk.internal.vm=ALL-UNNAMED'
+}
+
+publishPlugin {
+    username System.getenv('username')
+    password System.getenv('password')
+    channels publishChannels
+}
+
+
